<resources>
    <string name="app_name">LJobs</string>
    <string name="welcome_text">Welcome</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="image_contentDesc">Search for vacancies from top companies and find your dream career!</string>
    <string name="emailRg">Email Address</string>
    <string name="passwordRg">Password</string>
    <string name="passwordConfirmRg">Confirm password</string>
    <string name="create_acc">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">Resume</string>
    <string name="please_upload_your_resume">Please upload your resume</string>
    <string name="educational_information">Educational Information</string>
    <string name="please_add_your_educational_information">Please add your educational information</string>
    <string name="work_experience">Work Experience</string>
    <string name="please_add_your_work_experience">Please add your work experience</string>
    <string name="required">Required</string>
    <string name="nameRg">Name</string>
    <string name="phoneRg">Phone Number</string>
    <string name="more">More</string>
    <string name="update_profile">Update Profile</string>
    <string name="oldPasswordRg">Old Password</string>
    <string name="newPasswordUp">New Password</string>
    <string name="newPasswordConfirmUp">Confirm New Password</string>
    <string-array name="eduLvl">
        <item>UPSR</item>
        <item>PMR</item>
        <item>SPM</item>
        <item>STPM</item>
        <item>Skills Certificate</item>
        <item>Diploma</item>
        <item>Degree</item>
    </string-array>

    <string-array name="eduYear">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>Present</item>
        <string-array name="workingExp">
            <item>Less than 1 Years</item>
            <item>1-5 Years</item>
            <item>6-10 Years</item>
            <item>More than 10 Years</item>
        </string-array>
        <string-array name="jobFilter">
            <item>All</item>
            <item>Pending</item>
            <item>Approved</item>
            <item>Rejected</item>
        </string-array>

        <string-array name="role">
            <item>User</item>
            <item>Admin</item>
        </string-array>

    </string-array>
</resources>