<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainerUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailRg"
        app:hintTextColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:theme="@style/bottomLineColor"
        app:helperTextTextColor="@color/red"
        android:padding="@dimen/textInput_padding"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainerUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameRg"
        android:padding="@dimen/textInput_padding"
        app:hintTextColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:theme="@style/bottomLineColor"
        app:helperTextTextColor="@color/red"
        style="?attr/textInputFilledStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+60"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="11dp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneContainerUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneRg"
            android:padding="@dimen/textInput_padding"
            app:hintTextColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue"
            android:theme="@style/bottomLineColor"
            app:helperTextTextColor="@color/red"
            style="?attr/textInputFilledStyle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="UPDATE"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="CANCEL"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>