<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPasswordContainerUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldPasswordRg"
        android:padding="@dimen/textInput_padding"
        app:hintTextColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:theme="@style/bottomLineColor"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        style="?attr/textInputFilledStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainerUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPasswordUp"
        android:padding="@dimen/textInput_padding"
        app:hintTextColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:theme="@style/bottomLineColor"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        style="?attr/textInputFilledStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassContainerUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPasswordConfirmUp"
        android:padding="@dimen/textInput_padding"
        app:hintTextColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        app:endIconMode="password_toggle"
        android:theme="@style/bottomLineColor"
        app:helperTextTextColor="@color/red"
        style="?attr/textInputFilledStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="UPDATE"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:text="CANCEL"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>